updated application properties

--- a/storage/src/main/resources/application.properties
+++ b/storage/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.application.name=kbe-storage
+server.port=4442
 
+spring.datasource.url=jdbc:postgresql://localhost:5432/kbe_storage_db
+spring.datasource.username=gepa
+spring.datasource.password=abcd1234
+spring.jpa.show-sql=true
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto = create-drop
